--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="assets/logo-toil.ico" />
   </head>
-  <body>
+  <body class="font-body">
     <app-root></app-root>
   </body>
 </html>
